--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
-          java-version: 11
+          java-version: 17
       - run: chmod +x gradlew
       - run: ./gradlew --version --no-daemon
       - run: ./gradlew build shadowJar --stacktrace --no-daemon --console=plain --warning-mode all
@@ -23,7 +23,7 @@ jobs:
     needs: build
     strategy:
       matrix:
-        java: [8, 11]
+        java: [8, 11, 17]
     name: Integration Test - Java ${{ matrix.java }}
     steps:
       - uses: actions/checkout@v2
