[Fix] Fix testmod plugin id

--- a/test/mdk/build.gradle
+++ b/test/mdk/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
-apply plugin: 'com.matthewprenger.cursegradle'
+apply plugin: 'com.cdagaming.cursegradle'
 
 version = '1.0'
 group = 'com.matthewprenger.cursegradletestmod'
