--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: cursegradle-fat-jar
-          path: build/libs/CurseGradle-1.*.jar
+          path: build/libs/CurseGradle*.jar
   integration-test:
     runs-on: ubuntu-latest
     needs: build
