--- a/test/mdk/build.gradle
+++ b/test/mdk/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.+', changing: true
         classpath fileTree(dir: projectDir, include: ['CurseGradle*.jar'])
     }
 }
@@ -18,11 +18,11 @@ archivesBaseName = 'cursegradletestmod'
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
 
 minecraft {
-    mappings channel: 'snapshot', version: '20200514-1.16'
+    mappings channel: 'official', version: '1.16.5'
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.16.1-32.0.63'
+    minecraft 'net.minecraftforge:forge:1.16.5-36.2.39'
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
