--- a/test/mdk/build.gradle
+++ b/test/mdk/build.gradle
@@ -54,15 +54,15 @@ curseforge {
         releaseType = 'alpha'
 
         mainArtifact(jar) {
-            displayName = "My Test Mod version $version"
+            it.displayName = "My Test Mod version $version"
         }
 
         addArtifact(javadocJar) {
-            displayName = "My Test Mod Javadoc version $version"
+            it.displayName = "My Test Mod Javadoc version $version"
         }
 
         addArtifact(sourcesJar) {
-            displayName = "My Test Mod Sources version $version"
+            it.displayName = "My Test Mod Sources version $version"
         }
     }
 }
