--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,14 +7,15 @@ jobs:
     runs-on: ubuntu-latest
     name: Build
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: 17
       - run: chmod +x gradlew
       - run: ./gradlew --version --no-daemon
       - run: ./gradlew build shadowJar --stacktrace --no-daemon --console=plain --warning-mode all
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           name: cursegradle-fat-jar
           path: build/libs/CurseGradle*.jar
@@ -26,11 +27,12 @@ jobs:
         java: [8, 11, 17]
     name: Integration Test MDK - Java ${{ matrix.java }}
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: ${{ matrix.java }}
-      - uses: actions/download-artifact@v1
+      - uses: actions/download-artifact@v3
         with:
           name: cursegradle-fat-jar
           path: test/mdk
@@ -47,11 +49,12 @@ jobs:
         java: [ 8, 11, 16 ]
     name: Integration Test Bukkit - Java ${{ matrix.java }}
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: ${{ matrix.java }}
-      - uses: actions/download-artifact@v1
+      - uses: actions/download-artifact@v3
         with:
           name: cursegradle-fat-jar
           path: test/bukkit
